# agents

./: README.md  pyproject.toml
.agent/: PLAN.md  TODO.md
jolt-zig/: build.zig
jolt-zig/common/: attributes.zig  constants.zig  jolt_device.zig  lib.zig
jolt-zig/jolt-platform/: alloc.zig  cycle_tracking.zig  lib.zig  print.zig  random.zig
ralph/: __init__.py  agent.py  cli.py  simulator.py  telegram.py  telegram_config.py
ralph/prompts/: ios-development.md  maintain-repository.md  port-jolt-to-zig.md  port-python-to-typescript.md  port-react-to-vue.md
